--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^18.2.1",
     "@types/react-dom": "^18.2.2",
     "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/uuid": "^9.0.2",
     "node-sass": "^7.0.3"
   }
 }
