--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "smooth-scrollbar-react": "^2.4.1",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts start",
