--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.1",
     "@types/react-dom": "^18.2.2",
     "@types/react-input-mask": "^3.0.2",
+    "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "lodash": "^4.17.21",
@@ -21,12 +22,15 @@
     "react-hook-form": "^7.45.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-rating-stars-component": "^2.2.0",
+    "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "react-shadow": "^20.2.0",
+    "react-slick": "^0.29.0",
     "react-tooltip": "^5.18.0",
+    "slick-carousel": "^1.8.1",
     "smooth-scrollbar": "^8.8.4",
     "smooth-scrollbar-react": "^2.4.1",
     "socket.io": "^4.7.1",
