--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-paginate": "^8.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive": "^9.0.2",
     "react-responsive-modal": "^6.4.1",
