--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "socket.io": "^4.7.1",
     "socket.io-client": "^4.7.1",
     "typescript": "^4.9.5",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "zod": "^3.21.4"
