--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-slick": "^0.23.10",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-input-mask": "^3.0.0-alpha.2",
